# dg_demos

./: .gitignore  package.xml  readme.md  setup.cfg  setup.py
deprecated/python/: demo_read_file.py  dg_single_motor_cogging_identify.py  dg_singlemotor_cogging.py  main_quadruped_pid_control.py  main_quadruped_pid_control_simu.py  pid_controller.py  prologue_quadruped.py  quadruped_pid_control.py
deprecated/python/demos/teststand/: dg_network_follow.py  generate_demo_network.py
doc/: solo12_reactive_stepper.md
launch/: solo12_reactive_stepper_gamepad.launch.py
resource/kino_dyn_planner/solo12/: cfg_quadruped_dance_solo12.yaml  cfg_quadruped_trot_inplace_solo12.yaml
resource/kino_dyn_planner/solo8/: cfg_quadruped_back_flip.yaml  cfg_quadruped_fast_long_trot.yaml  cfg_quadruped_fast_trot.yaml  cfg_quadruped_flic_flac.yaml  cfg_quadruped_flip.yaml  cfg_quadruped_jump_forward.yaml  cfg_quadruped_jump_high.yaml  cfg_quadruped_jump_inside.yaml  cfg_quadruped_jump_low.yaml  cfg_quadruped_jump_on_box.yaml  cfg_quadruped_long_trot.yaml  cfg_quadruped_slow_trot.yaml  cfg_quadruped_standing.yaml  cfg_quadruped_standing_long.yaml  cfg_quadruped_step_jump_on_box.yaml  cfg_quadruped_step_on_box.yaml  cfg_quadruped_step_on_box_jump.yaml  cfg_quadruped_step_on_box_rear.yaml  cfg_quadruped_step_on_box_reset.yaml  cfg_quadruped_super_long_trot.yaml
scripts/: gamepad_publisher.py  joy_forwarder.py  solo12_reactive_stepper_gamepad_sequencer.py
src/dg_demos/: simulation_tools.py
src/dg_demos/bolt/controllers/: basic_pd_controller.py  (+13 more)
tests/: quat_check.py  test_simulations.py
(+101 files in other folders)
