<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    
    <name>dg_demos</name>
    
    <version>1.0.0</version>
    
    <description>
        This package contains the robot demos or the experiments done during
        research that needs execution on a real/simulated hardware.
    </description>
    
    <maintainer email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</maintainer>
    
    <license>BSD-3-clause</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <!-- All other dependencies are considered optionnal in this package. -->

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
